tests/invalid/dcg_context.err_exp
dcg_context.m:076: In clause for `get_class_super(out, out, in, out)':
dcg_context.m:076:   error: [38;5;203mmode mismatch[39;49m in if-then-else.
dcg_context.m:076:   The variable [38;5;87m`Class'[39;49m is ground in some branches but not
dcg_context.m:076:   others.
dcg_context.m:076:     In this branch, `Class' is [38;5;226mfree.[39;49m
dcg_context.m:077:     In this branch, `Class' is [38;5;226mground.[39;49m
dcg_context.m:076:   The variable [38;5;87m`MaybeSuper'[39;49m is ground in some branches but
dcg_context.m:076:   not others.
dcg_context.m:076:     In this branch, `MaybeSuper' is [38;5;226mfree.[39;49m
dcg_context.m:077:     In this branch, `MaybeSuper' is [38;5;226mground.[39;49m
